--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>SmartFridge</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"/>
     <link rel="stylesheet" href="css/style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
 <div id="root"></div>
