--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <title>SmartFridge</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500"/>
     <link rel="stylesheet" href="css/style.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
 </head>
 <body>
 <div id="root"></div>
+
 <script src="/dist/client.bundle.js"></script>
 </body>
 </html>
